TLC 2/TLC3.cydsn/CortexM0/ARM_GCC_484/Debug/TLC3-ARM_GCC_484-Debug-BUILD.log
--------------- Build Started: 12/08/2016 22:44:57 Project: TLC3, Configuration: ARM GCC 4.8.4 Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\Pavandeep\AppData\Local\Cypress Semiconductor\PSoC Creator\3.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "C:\Users\Pavandeep\Documents\PSoC Creator\TLC 2\TLC3.cydsn\TLC3.cyprj" -d CY8C4247LQI-BL483 -s "C:\Users\Pavandeep\Documents\PSoC Creator\TLC 2\TLC3.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
ADD: pft.M0040: information: The following 21 pin(s) will be assigned a location by the fitter: EGreen(0), ERed(0), ESensor(0), EYellow(0), NAGreen(0), NARed(0), NASensor(0), NAYellow(0), NGreen(0), NRed(0), NYellow(0), SAGreen(0), SARed(0), SAYellow(0), SGreen(0), SRed(0), SYellow(0), TLCMode(0), WGreen(0), WRed(0), WYellow(0)
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -I.\Generated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_484\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -O0 -c .\main.c -o .\CortexM0\ARM_GCC_484\Debug\main.o
.\main.c: In function 'main':
.\main.c:190:11: error: expected expression before ')' token
     } if ()
           ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 12/08/2016 22:45:23 ---------------
